--- a/src/components/FeatureShowcase.astro
+++ b/src/components/FeatureShowcase.astro
@@ -12,9 +12,9 @@
       </h2>
     </div>
 
-    <!-- Parallax Decorators -->
-    <div class="absolute top-[10%] left-[5%] w-64 h-64 bg-[var(--color-oat)] rounded-full blur-[100px] pointer-events-none opacity-50 parallax-elem" data-speed="1.2"></div>
-    <div class="absolute bottom-[20%] right-[10%] w-96 h-96 bg-[var(--color-gold)]/20 rounded-full blur-[120px] pointer-events-none parallax-elem" data-speed="0.7"></div>
+    <!-- Parallax Decorators (hidden on mobile) -->
+    <div class="hidden md:block absolute top-[10%] left-[5%] w-64 h-64 bg-[var(--color-gold)]/15 rounded-full blur-[100px] pointer-events-none opacity-50 parallax-elem" data-speed="1.2"></div>
+    <div class="hidden md:block absolute bottom-[20%] right-[10%] w-96 h-96 bg-[var(--color-gold)]/15 rounded-full blur-[120px] pointer-events-none parallax-elem" data-speed="0.7"></div>
 
 
     <!-- Features block, similar to Meet CropTab layout -->
