--- a/src/components/en/Collections.astro
+++ b/src/components/en/Collections.astro
@@ -6,31 +6,31 @@ const collections = [
     title: "Noble Wood",
     desc: "Oak, walnut, or cherry. Timeless classicism for traditional cellars.",
     img: "/images/collections/madera-noble.png",
-    link: "#"
+    link: "https://caveduke.com/en/wooden-wine-cabinets/"
   },
   {
     title: "Steel and Glass",
     desc: "Pure lines and absolute transparency. Architectural avant-garde.",
     img: "/images/collections/acero-cristal.png",
-    link: "#"
+    link: "https://caveduke.com/en/steel-and-glass/"
   },
   {
     title: "Under Stairs",
     desc: "Masterful use of space with impeccable aesthetics.",
     img: "/images/collections/bajo-escalera.png",
-    link: "#"
+    link: "https://caveduke.com/en/wine-cabinets-under-the-stairs/"
   },
   {
-    title: "Bespoke",
+    title: "Custom Wine Cabinets",
     desc: "Total integration into existing furniture. No design limits.",
     img: "/images/collections/a-medida.png",
-    link: "#"
+    link: "https://caveduke.com/en/custom-wine-cabinets/"
   },
   {
-    title: "Cigars & Hams",
+    title: "Cigars & Humidors",
     desc: "The same conditions of excellence adapted to other pleasures.",
     img: "/images/collections/puros.png",
-    link: "#"
+    link: "https://caveduke.com/en/cigar-humidors/"
   }
 ];
 ---
