--- a/src/components/fr/Collections.astro
+++ b/src/components/fr/Collections.astro
@@ -6,31 +6,31 @@ const collections = [
     title: 'Bois Nobles',
     desc: 'Noyer, cerisier et chêne massif dans leur splendeur la plus pure. Des pièces qui transforment tout espace en cave privée.',
     img: '/images/collections/madera-noble.png',
-    link: '#'
+    link: 'https://caveduke.com/fr/caves-%C3%A0-vin-en-bois/'
   },
   {
     title: 'Acier et Verre',
     desc: 'La rencontre de la précision industrielle et de l\'artisanat. Lignes architecturales pour les espaces contemporains.',
     img: '/images/collections/acero-cristal.png',
-    link: '#'
+    link: 'https://caveduke.com/fr/acier-et-verre/'
   },
   {
     title: 'Sous Escalier',
     desc: 'Nous transformons les espaces inutilisés en caves sur mesure. L\'art de l\'intégration parfaite.',
     img: '/images/collections/bajo-escalera.png',
-    link: '#'
+    link: 'https://caveduke.com/fr/caves-a-vin-sous-escalier/'
   },
   {
     title: 'Sur Mesure',
     desc: 'Votre vision, notre artisanat. Des projets singuliers sans aucune limitation de design ou de capacité.',
     img: '/images/collections/a-medida.png',
-    link: '#'
+    link: 'https://caveduke.com/fr/caves-a-vin-sur-mesure/'
   },
   {
-    title: 'Cigares & Jambon',
+    title: 'Cigares & Caves à Cigares',
     desc: 'Nos chambres avec contrôle exact de température et d\'humidité. Conditions parfaites pour la conservation.',
     img: '/images/collections/puros.png',
-    link: '#'
+    link: 'https://caveduke.com/fr/humidors-a-cigares/'
   },
 ];
 ---
