--- a/src/pages/en/index.astro
+++ b/src/pages/en/index.astro
@@ -8,6 +8,7 @@ import Philosophy from '../../components/en/Philosophy.astro';
 import FeatureShowcase from '../../components/en/FeatureShowcase.astro';
 import Collections from '../../components/en/Collections.astro';
 import Numbers from '../../components/en/Numbers.astro';
+import MicroCTA from '../../components/en/MicroCTA.astro';
 import Testimonials from '../../components/en/Testimonials.astro';
 import FAQ from '../../components/en/FAQ.astro';
 import Contact from '../../components/en/Contact.astro';
@@ -24,6 +25,7 @@ import Footer from '../../components/en/Footer.astro';
 		<Philosophy />
 		<FeatureShowcase />
 		<Collections />
+		<MicroCTA />
 		<Numbers />
 		<Testimonials />
 		<FAQ />
