--- a/src/pages/fr/index.astro
+++ b/src/pages/fr/index.astro
@@ -8,6 +8,7 @@ import Philosophy from '../../components/fr/Philosophy.astro';
 import FeatureShowcase from '../../components/fr/FeatureShowcase.astro';
 import Collections from '../../components/fr/Collections.astro';
 import Numbers from '../../components/fr/Numbers.astro';
+import MicroCTA from '../../components/fr/MicroCTA.astro';
 import Testimonials from '../../components/fr/Testimonials.astro';
 import FAQ from '../../components/fr/FAQ.astro';
 import Contact from '../../components/fr/Contact.astro';
@@ -24,6 +25,7 @@ import Footer from '../../components/fr/Footer.astro';
 		<Philosophy />
 		<FeatureShowcase />
 		<Collections />
+		<MicroCTA />
 		<Numbers />
 		<Testimonials />
 		<FAQ />
