--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import Philosophy from '../components/Philosophy.astro';
 import FeatureShowcase from '../components/FeatureShowcase.astro';
 import Collections from '../components/Collections.astro';
 import Numbers from '../components/Numbers.astro';
+import MicroCTA from '../components/MicroCTA.astro';
 import Testimonials from '../components/Testimonials.astro';
 import FAQ from '../components/FAQ.astro';
 import Contact from '../components/Contact.astro';
@@ -27,6 +28,7 @@ import Footer from '../components/Footer.astro';
 		<Philosophy />
 		<FeatureShowcase />
 		<Collections />
+		<MicroCTA />
 		<Numbers />
 		<Testimonials />
 		<FAQ />
